--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.4",
+    "@mui/material": "^5.14.5",
     "@mui/x-data-grid": "^6.11.1",
     "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.83.0",
@@ -22,15 +22,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.3.3",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
