--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.3",
+    "file-saver": "^2.0.5",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
